<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OptionsActivity"
    tools:showIn="@layout/activity_preferences">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/currency_options"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.example.powerconsumptionactivitymonitor.SearchableSpinner
            android:id="@+id/currencyOptionsSpinner"
            android:layout_width="match_parent"
            style="@style/Spinner"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/energy_charge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/usage_fee_per_kwh_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:inputType="numberDecimal"
            android:text="@string/electric_fee_example"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/basic_charge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/basic_charge_fee_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:inputType="numberDecimal"
            android:text="@string/electric_fee_example"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/others_fee"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/other_fee_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:inputType="numberDecimal"
            android:text="@string/electric_fee_example"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>


</LinearLayout>