<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"

                />


            <TextView
                android:id="@+id/totalElectricFeeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/electric_fee_example"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@+id/totalElectricUsageTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/electric_usage_example"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/daysEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:focusable="false"
                android:inputType="none"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#151515"
        android:paddingTop="10dip"
        android:paddingBottom="0dip" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#151515"
        android:paddingTop="10dip"
        android:paddingBottom="0dip" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="@string/activity_per_day"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addUsageButton"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_activity"

            android:src="@android:drawable/ic_menu_add" />
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#151515"
        android:paddingTop="10dip"
        android:paddingBottom="0dip" />


    <ListView
        android:id="@+id/usageListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp" />


</LinearLayout>