<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UsageActivity"
    tools:showIn="@layout/activity_usage">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/usageElectronicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electronic"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:id="@+id/electronicNameSpinner"-->
            <!--/>-->

            <com.example.powerconsumptionactivitymonitor.SearchableSpinner
                android:id="@+id/electronicNameSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Spinner"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/numberOfElectronicLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_items"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/numberOfElectronicTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dip"
            android:ems="4"
            android:focusable="false"
            android:inputType="number"
            android:text="@string/default_number_electronic"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#151515"
            android:paddingTop="10dip"
            android:paddingBottom="0dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/usage_day"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/addTimeUsageButton"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:background="?attr/selectableItemBackground"
                android:src="@android:drawable/ic_menu_add" />


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#151515"
            android:paddingTop="10dip"
            android:paddingBottom="0dip" />

        <ListView
            android:id="@+id/timeUsageListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp" />

    </LinearLayout>


</LinearLayout>